@@ -1,3 +1,8 @@
+2006-01-23  Mats Cronqvist  <locmacr@mwlx084>
+
+	* gperfConsumer.erl (Module): beamload required os_mon to display
+	properly
+
 2006-01-17  Mats Cronqvist  <locmacr@mwlx084>
 
 	* gperfConsumer.erl (Module):  cpu load now shows beam, user, kernel, io
